k8s/zcp-alertmanager-deployment-ibm.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zcp-alertmanager
  namespace: zcp-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: zcp-alertmanager
    spec:
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: role
                operator: In
                values:
                - "management"
      containers:
      - name: zcp-alertmanager
        image: registry.au-syd.bluemix.net/cloudzcp/zcp-alertmanager:0.9.2
        imagePullPolicy: Always
        ports:
        - name: cont-port
          containerPort: 8080
      serviceAccount: zcp-system-admin
      serviceAccountName: zcp-system-admin

---

apiVersion: v1
kind: Service
metadata:
  name: zcp-alertmanager
  labels:
    name: zcp-alertmanager
  namespace: zcp-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    component: zcp-alertmanager
