k8s/zcp-alertmanager-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zcp-alertmanager
  namespace: zcp-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: zcp-alertmanager
#        stack: stable
    spec:
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: role
                operator: In
                values:
                - "management"
      containers:
      - name: zcp-alertmanager
        image: cloudzcp/zcp-alertmanager
        imagePullPolicy: Always
        ports:
        - name: cont-port
          containerPort: 8080
#        envFrom:
#        - configMapRef:
#            name: cloud-movie-bk-config
#        env:
#          - name: REDIS_PASSWORD
#            valueFrom:
#              secretKeyRef:
#                name: cloud-movie-bk-secret
#                key: REDIS_PASSWORD
#          - name: MARIADB_PASSWORD
#            valueFrom:
#              secretKeyRef:
#                name: cloud-movie-bk-secret
#                key: MARIADB_PASSWORD
      serviceAccount: zcp-system-admin
      serviceAccountName: zcp-system-admin

---

apiVersion: v1
kind: Service
metadata:
  name: zcp-alertmanager
  labels:
    name: zcp-alertmanager
  namespace: zcp-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: "cont-port"
    protocol: TCP
    name: http
  selector:
    component: zcp-alertmanager
