k8s/zcp-alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  name: zcp-alertmanager-ingress
  namespace: zcp-system
spec:
  tls:
  - hosts:
    - alert.cloudzcp.com
    secretName: cloudzcp-com-cert
  rules:
  - host: alert.cloudzcp.com
    http:
      paths:
      - backend:
          serviceName: zcp-alertmanager
          servicePort: 80
